<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image"
        app:srcCompat="@drawable/background3a" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/teamA"
                android:paddingTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:textColor="#616161" />


            <TextView
                android:id="@+id/scoreA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="56sp"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/touchDownA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/touch_down"
                android:onClick="addSixPointsForTeamA"/>


            <Button
                android:id="@+id/oneExtraPointA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/one_extra_point"
                android:onClick="addOnePointForTeamA"/>


            <Button
                android:id="@+id/twoExtraPointsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/two_extra_points"
                android:onClick="addTwoPointsForTeamA"/>

            <Button
                android:id="@+id/fieldGoalA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/field_goal"
                android:onClick="addThreePointsForTeamA"/>

            <Button
                android:id="@+id/safetyA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/safety"
                android:onClick="addTwoPointsForTeamA"/>

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#333333" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">


            <TextView
                android:id="@+id/teamB"
                android:paddingTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:textColor="#616161"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />


            <TextView
                android:id="@+id/scoreB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="56sp"
                android:gravity="center_horizontal" />


            <Button
                android:id="@+id/touchDownB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/touch_down"
                android:onClick="addSixPointsForTeamB"/>


            <Button
                android:id="@+id/oneExtraPointB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/one_extra_point"
                android:onClick="addOnePointForTeamB"/>


            <Button
                android:id="@+id/twoExtraPointsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/two_extra_points"
                android:onClick="addTwoPointsForTeamB"/>

            <Button
                android:id="@+id/fieldGoalB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/field_goal"
                android:onClick="addThreePointsForTeamB"/>

            <Button
                android:id="@+id/safetyB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/safety"
                android:onClick="addTwoPointsForTeamB"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="256dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/reset"
        android:textColor="#ffffff"
        android:background="@color/primaryDarkColor"
        android:onClick="resetScores"/>

</RelativeLayout>

